# kv_server

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  build.rs  dev.docker-compose.yaml  docker-compose.yaml  specs.md
.sqlx/: query-03b279ed1c6c574b70f7e2be420b402d8ea98be759959a46707e18b546f11bd3.json  query-2d332a5eff99fbcfb8d4bf14bea5098adbb8825be0320f6ddb01bb56f6f7299d.json  query-357746579a97a7e0f01811501c641c897eae5c39f6c8998568cea7169a76271e.json  query-3e56b8647152313c463c150f9a552060ba82417fc2102249cc5be49fce99fecd.json  query-41fee617fe3a165d9ed1126536448bdc600bafef9a275412f03436ca6b6ff901.json  query-43933cf348a95c1d94f6ecd39cb1897bda9d405de3ce5e0432c713d9bd89e0e1.json  query-4581fc1e2e30cee3f2988278b2f3ac228a6ab5b4e9e775e421fcf7267c744a4e.json  query-4a0e5c2afb2631529d88978bf1fc4969556d620409a2c665f006231b72690533.json  query-4cf4d83bf10d2991265759a8f0fdeb67ba877e8a1aec1318221863c960000b0f.json  query-5517d194e4019f34952fafd900c74764c79fe7343c09a1961897eb67b20c2b85.json  query-57dee38db939957fcedefd1c4fc5ad9917b6667ecd36da3ab7a1852be1910d18.json  query-5e7b030403fb800f301df02698cd48fd7a5876ef760a3705cd44327fbaf66768.json  query-625b3e350794025f9f52fba5c56bcec3af92d26334fc829cbab5fdfb4d3a140e.json  query-640d91fa84f19d7ef1bafcd0ab7bc954694360bdd520c0c2b081d54e01c9d544.json  query-6a53948bb29b1bc3d183e69ba3625a1c8c10b6076395c21e78d283f1f1e0982c.json  query-71b0d3df40b538ff46bb1aa8bde1d6172383b554e7e1a0d39a82d3efda44101e.json  query-843f28fbc7a89d8ac375b0b918efb12c321bcf4db8d779da8217de83ea3aa0c6.json  (+14 more)
.tools/: compose-up.sh  dev.sh  (+3 more)
(+33 files in other folders)
