[package]
name = "kv_manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kv_manager"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "migrate", "chrono", "uuid"] }

openidconnect = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = { version = "0.22", features = ["std"] }
hmac = "0.12"

dotenvy = "0.15"
dashmap = "5"
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

thiserror = "1"
anyhow = "1"

include_dir = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
time = "0.3"

[dev-dependencies]
tokio-test = "0.4"
